@@ -4,6 +4,7 @@
 	* Updated e-mu overlap removal to remove all possible pairings with each lepton
 	* Also updated mu-mu overlap removal in the same way
 	* Tagging SusyNtuple-00-00-21
+	* Also updated e-e overlap removal in the same way (after the tag)
 
 2012-08-07 Steve
 	* Changed default btag WP to MV1 @ 85%
